--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
     "license": "MIT",
     "scripts": {
         "lint:fix": "eslint --fix src --ext ts,tsx",
-        "test": "jest"
+        "test": "jest",
+        "typeorm": "tsnd ./node_modules/typeorm/cli",
+        "dev": "ts-node-dev --transpile-only --ignore-watch node-modules --respawn src/server.ts"
     },
     "devDependencies": {
+        "@types/express": "^4.17.12",
         "@types/jest": "^26.0.21",
         "@types/node": "^14.14.35",
         "jest": "^26.6.3",
         "ts-jest": "^26.5.4",
         "ts-node": "^9.1.1",
+        "ts-node-dev": "^1.1.6",
         "typescript": "^4.2.3"
     },
     "dependencies": {
-        "pg": "^8.5.1",
-        "typeorm": "^0.2.31"
+        "express": "^4.17.1",
+        "pg": "^8.6.0",
+        "typeorm": "^0.2.32",
+        "uuid": "^8.3.2"
     }
 }
